v3.11.0 (XXXX-XX-XX)
--------------------

* BTS-1350: Fixed imprecision in index info in telemetrics object for cluster.
  When the collection also had an arangosearch view, telemetrics showed
  imprecise index values because the view was being considered as an index of
  type arangosearch, and its object wouldn't contain expected fields that would
  be found in other indexes' objects.

* Add metric `arangodb_file_descriptors_current` to expose the number of file
  descriptors currently opened by the arangod process. This metric is available
  on Linux only.
  As counting the number of open file descriptors can be expensive, this metric
  is only updated in a configurable interval. The new startup option
  `--server.descriptors-count-interval` can be used to specify the update
  interval (in milliseconds). It defaults to 60,000 (i.e. once per minute).
  The startup option can be set to a value of `0` to disable the counting of
  open file descriptors for performance reasons.
  If counting is turned off, the metric will report a value of `0`.

* ES-1566: fix an issue when trying to restrict traversals to non-existing
  collections with `edgeCollections` traversal option.

  If a non-existing collection is specified in the `edgeCollections` or
  `vertexCollections` options of an AQL traversal, the query will now fail with
  a `collection or view not found` error. This is a behavior change compared to
  previous versions, which ignored non-existing vertex collections and had
  undefined behavior when specifying non-existing edge collections.

* Added metric `rocksdb_cache_peak_allocated` to store the peak memory
  allocation value for in-memory caches.

* Remove leftover in-memory cache tables after dropping collections that
  had their `cacheEnabled` flag set to `true`. Previously some memory 
  could remain allocated in the in-memory cache even after such collections
  were dropped.

* BTS-1315: Fixed spurious occurring failures during Foxx Application