@@ -55,15 +55,7 @@ std::string const kTelemetricsGatheringUrl =
 namespace arangodb {
 TelemetricsHandler::TelemetricsHandler(ArangoshServer& server,
                                        bool sendToEndpoint)
-    :
-#ifdef ARANGODB_ENABLE_MAINTAINER_MODE
-      _server(server),
-      _sendToEndpoint(sendToEndpoint) {
-}
-#else
-      _server(server) {
-}
-#endif
+    : _server(server), _sendToEndpoint(sendToEndpoint) {}
 
 TelemetricsHandler::~TelemetricsHandler() {
   if (_telemetricsThread.joinable()) {
@@ -119,6 +111,15 @@ void TelemetricsHandler::fetchTelemetricsFromServer() {
       _httpClient = clientManager.getConnectedClient(true, false, false, 0);
 
       if (_httpClient != nullptr && _httpClient->isConnected()) {
+        auto [result, role] = clientManager.getArangoIsCluster(*_httpClient);
+        if (result.fail()) {
+          LOG_TOPIC("a3146", WARN, arangodb::Logger::FIXME)
+              << "Error: could not detect ArangoDB instance type: "
+              << result.errorMessage();
+        } else if (role != "COORDINATOR" && role != "SINGLE") {
+          _sendToEndpoint = false;
+        }
+
         auto& clientParams = _httpClient->params();
         clientParams.setRequestTimeout(30);
         lk.unlock();
@@ -302,6 +303,7 @@ TelemetricsHandler::buildHttpClient(std::string& url) const {
             cf.getCommFeaturePhase(), newEndpoint, 30, 60, 3, sslProtocol));
 
     if (connection != nullptr) {
+      connection->setSocketNonBlocking(true);
       // note: the returned SimpleHttpClient instance takes over ownership
       // for the connection object
       return std::make_pair(
@@ -340,13 +342,7 @@ void TelemetricsHandler::arrangeTelemetrics() {
     std::unique_lock lk(_mtx);
     if (_telemetricsFetchResponse.ok() && !_telemetricsFetchedInfo.isEmpty()) {
       lk.unlock();
-
-#ifdef ARANGODB_ENABLE_MAINTAINER_MODE
-      bool sendToEndpoint = _sendToEndpoint;
-#else
-      constexpr bool sendToEndpoint = true;
-#endif
-      if (sendToEndpoint) {
+      if (_sendToEndpoint) {
         sendTelemetricsToEndpoint(::kTelemetricsGatheringUrl);
       }
     }
