@@ -165,6 +165,12 @@ class GeneralClientConnection {
   }
 
   //////////////////////////////////////////////////////////////////////////////
+  /// @brief set whether or not http client is from telemetrics
+  //////////////////////////////////////////////////////////////////////////////
+
+  void setSocketNonBlocking(bool value) { _isSocketNonBlocking = value; }
+
+  //////////////////////////////////////////////////////////////////////////////
   /// @brief the underlying application server
   //////////////////////////////////////////////////////////////////////////////
 
@@ -267,6 +273,12 @@ class GeneralClientConnection {
   size_t _numConnectRetries;
 
   bool _freeEndpointOnDestruction;
+
+  //////////////////////////////////////////////////////////////////////////////
+  /// @brief whether the http client is from telemetrics
+  //////////////////////////////////////////////////////////////////////////////
+
+  bool _isSocketNonBlocking;
 
   //////////////////////////////////////////////////////////////////////////////
   /// @brief whether we're connected
