@@ -1,6 +1,16 @@
 v3.11.0 (XXXX-XX-XX)
 --------------------
 
+* BTS-1340: Fixed telemetrics api making shell hang when logging into it and
+  leaving it too quickly so the telemetrics API doesn't have time to send the
+  data to the warehouse. The thread could be hanging on SSL_connect() until the
+  connection timeout if the socket is blocking, so the socket was made
+  non-blocking for the thread to leave SSL_connect() after the connection is
+  interrupted when leaving the shell. Also created startup parameter
+  `--client.failure-points`for arangosh which enables failure points whose names
+  are provided in an array of strings, just like in `--server.failure-point` for
+  arangod.
+
 * BTS-1350: Fixed imprecision in index info in telemetrics object for cluster.
   When the collection also had an arangosearch view, telemetrics showed
   imprecise index values because the view was being considered as an index of
